fixed timer to not accelerate due to too many clicks by removing options and turning answer into the only text visible. Added spaces to guess option buttons.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,11 @@ body {
     background-color: rgba(255, 166, 0, 0.829);
 }
 
+button {
+    margin-left: 3px;
+    margin-right: 3px;
+}
+
 #questionheading{
     font-size: 80px;
     text-emphasis: bold;
